--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 
 </head>
 <body>
-    <img class="capa" src="capa.jpg">
-   <h1>Beauty Boxx</h1> 
-   <p> Chegamos para mudar sua vida"sua pele". Somos uma das maiores lojas de revenda da America Latina.
-   </p> Aqui você encontra todos os tipo de maquiagens.
+    <header>
+
+    </header>
+    <main>
+        <img class="capa" src="capa.jpg">
+    <h1>Beauty Boxx</h1> 
+    <p> Chegamos para mudar sua vida"sua pele". Somos uma das maiores lojas de revenda da America Latina.
+    </p> <em> você encontra todos os tipo de maquiagens.</em>
+    <div class="beneficios">
+</h2>Benefícios da Beauty Boxx</h2>
+<ul>
+    <li>Aqui você encontra produtos de qualidades</li>
+    <li>Com melhores preços</li>
+    <li>Melhor atendimento</li>
+</ul>
+    </div>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
