--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <header>
-
+<div class="cabecalho"></div>
+<nav>
+  <a href="index.html">HOME</a>
+  <a href="produtos.html">PRODUTOS</a>
+  <a href="contatos.html">CONTATOS</a>
+</nav>
     </header>
     <main>
         <div class="principal"></div>
