--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 </head>
 <body>
-    <header>
-<div class="cabecalho"></div>
-<nav>
-  <a href="index.html">HOME</a>
-  <a href="produtos.html">PRODUTOS</a>
-  <a href="contatos.html">CONTATOS</a>
-</nav>
+  <header>
+    <div class="cabecalho">
+      <nav>
+        <a href="index.html">HOME</a>
+        <a href="produtos.html">PRODUTOS</a>
+        <a href="contatos.html">CONTATOS</a>
+      </nav> 
+      <h3><img class="logo" src="foto-logo.jpg"></h3>
+    </div>
     </header>
     <main>
         <div class="principal"></div>
