--- a/produtos.html
+++ b/produtos.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel= "stylesheet" type="text/css" href= "style-produtos.css">
+
 </head>
-<body><h1>isto é uma página de produtos</h1>
-    
+<body>
+    <header>
+        <div class="cabecalho">
+            <nav>
+              <a href="index.html">HOME</a>
+              <a href="produtos.html">PRODUTOS</a>
+              <a href="contatos.html">CONTATOS</a>
+            </nav> 
+            <h3><img class="logo" src="foto-logo.jpg"></h3>
+          </div>
+    </header>
+    <main>
+        <ul>
+            <li>
+                <h2>Bases</h2>
+                <img class="imagem-produto" src="produtos01.jpg">
+                <p>Venha conhecer nossa bases, temos bases para todos os tipos de peles.</p>
+            </li>
+            <li>
+                <h2>Batom</h2>
+                <img class="imagem-produto" src="produtos02.jpg">
+                <p>Os melhores batons voce encontra aqui</p>
+           <li>
+            <h2>Skin care</h2>
+            <img class="imagem-produto" src="produtos03.jpg">
+            <p>Melhores produtos para sua pele.</p>
+           </li>
+        </ul>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
